[gd_scene load_steps=13 format=3 uid="uid://ddccl1pdkg44s"]

[ext_resource type="Script" path="res://Player/char.gd" id="1_j7ehf"]
[ext_resource type="Texture2D" uid="uid://d03eru6tdavox" path="res://Player/MachoMovement.png" id="2_b6q1j"]
[ext_resource type="Script" path="res://Player/bouncer_platform.gd" id="3_ao4j0"]
[ext_resource type="Texture2D" uid="uid://hgoc7gushbqx" path="res://PlaceholderAssets/liege.png" id="4_7rnj6"]
[ext_resource type="AudioStream" uid="uid://crvd6rxaxqq3r" path="res://PlaceholderAssets/woah_yeah.wav" id="5_ow78x"]
[ext_resource type="AudioStream" uid="uid://1ee5alqf73vg" path="res://PlaceholderAssets/second_jump.wav" id="6_nxkm4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_184ao"]
size = Vector2(125, 58)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nrnnx"]
size = Vector2(176, 12)

[sub_resource type="Animation" id="Animation_f2m67"]
resource_name = "walking"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Icon:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.233333, 0.5, 0.733333),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_ffpa7"]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Icon:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_c8x78"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Icon:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8iic6"]
_data = {
"RESET": SubResource("Animation_c8x78"),
"idle": SubResource("Animation_ffpa7"),
"walking": SubResource("Animation_f2m67")
}

[node name="Char" type="CharacterBody2D"]
position = Vector2(560, 394)
script = ExtResource("1_j7ehf")
jump_velocity = -600.0

[node name="Icon" type="Sprite2D" parent="."]
position = Vector2(-3, 12)
scale = Vector2(0.273437, 0.244376)
texture = ExtResource("2_b6q1j")
hframes = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 26)
shape = SubResource("RectangleShape2D_184ao")

[node name="Bouncer" type="RigidBody2D" parent="."]
position = Vector2(0, -55)
collision_mask = 2
mass = 15.0
gravity_scale = 0.0
continuous_cd = 2
script = ExtResource("3_ao4j0")
spring_strength = 700.0

[node name="Sprite2D" type="Sprite2D" parent="Bouncer"]
position = Vector2(-0.5, 20)
scale = Vector2(0.284424, 0.207792)
texture = ExtResource("4_7rnj6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bouncer"]
position = Vector2(0, 18)
shape = SubResource("RectangleShape2D_nrnnx")

[node name="HUD" type="CanvasLayer" parent="."]
visible = false

[node name="MovementControls" type="Control" parent="HUD"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/MovementControls"]
layout_mode = 0
offset_left = 710.0
offset_top = 14.0
offset_right = 1128.0
offset_bottom = 245.0

[node name="Speed" type="Label" parent="HUD/MovementControls/VBoxContainer"]
layout_mode = 2
text = "speed"

[node name="SpeedSlider" type="HSlider" parent="HUD/MovementControls/VBoxContainer"]
layout_mode = 2
min_value = 100.0
max_value = 1000.0
value = 400.0

[node name="JumpVelocity" type="Label" parent="HUD/MovementControls/VBoxContainer"]
layout_mode = 2
text = "jump strength (- is more)"

[node name="JumpVelocitySlider" type="HSlider" parent="HUD/MovementControls/VBoxContainer"]
layout_mode = 2
min_value = -2000.0
max_value = -100.0
value = -800.0

[node name="NormalFallSpeed" type="Label" parent="HUD/MovementControls/VBoxContainer"]
layout_mode = 2
text = "gravity"

[node name="NormalFallSpeedSlider" type="HSlider" parent="HUD/MovementControls/VBoxContainer"]
layout_mode = 2
min_value = 500.0
max_value = 3000.0
value = 1800.0

[node name="FallMultiplier" type="Label" parent="HUD/MovementControls/VBoxContainer"]
layout_mode = 2
text = "increase when down"

[node name="FallMultiplierSlider" type="HSlider" parent="HUD/MovementControls/VBoxContainer"]
layout_mode = 2
min_value = 1.0
max_value = 20.0
value = 9.0

[node name="JumpCutMultiplier" type="Label" parent="HUD/MovementControls/VBoxContainer"]
layout_mode = 2
text = "reduce when stop jump"

[node name="JumpCutMultiplierSlider" type="HSlider" parent="HUD/MovementControls/VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.03

[node name="Audio" type="Node" parent="."]

[node name="JumpSingle" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("5_ow78x")
volume_db = -20.144

[node name="JumpDouble" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("6_nxkm4")
volume_db = -33.0

[node name="TiltBouncer" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("6_nxkm4")
volume_db = -20.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_8iic6")
}

[connection signal="value_changed" from="HUD/MovementControls/VBoxContainer/SpeedSlider" to="." method="_on_speed_slider_value_changed"]
[connection signal="value_changed" from="HUD/MovementControls/VBoxContainer/JumpVelocitySlider" to="." method="_on_jump_velocity_slider_value_changed"]
[connection signal="value_changed" from="HUD/MovementControls/VBoxContainer/NormalFallSpeedSlider" to="." method="_on_normal_fall_speed_slider_value_changed"]
[connection signal="value_changed" from="HUD/MovementControls/VBoxContainer/FallMultiplierSlider" to="." method="_on_fall_multiplier_slider_value_changed"]
[connection signal="value_changed" from="HUD/MovementControls/VBoxContainer/JumpCutMultiplierSlider" to="." method="_on_jump_cut_multiplier_slider_value_changed"]
